<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_text_medium"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/hight"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSearchL"
            style="@style/ButtonMainMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/hight"
            android:text="@string/search_play_list"
            app:icon="@drawable/light_mode_loupe" />

        <Button
            android:id="@+id/buttonMediaL"
            style="@style/ButtonMainMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/hight"
            android:text="@string/media_play_list"
            app:icon="@drawable/light_mode_media" />

        <Button
            android:id="@+id/buttonSettingsL"
            style="@style/ButtonMainMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/hight"
            android:text="@string/settings_play_list"
            app:icon="@drawable/light_mode_settings" />

    </LinearLayout>
</LinearLayout>