<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"

            android:text="настройки"
            android:textColor="#000000"
            android:textSize="40sp" />


    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <Switch

            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_margin="0dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:text="@string/dark_play_list"
            android:textSize="20dp"
            android:textColor="#ffffff"

            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_margin="0dp"
            android:layout_gravity="left"
            android:layout_weight="1"

            android:textSize="20dp"

            android:textAllCaps = "false"
            android:text="@string/share_play_list"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:icon="@drawable/light_mode_media"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_margin="0dp"
            android:layout_gravity="left"
            android:layout_weight="1"

            android:textSize="20dp"

            android:textAllCaps = "false"
            android:text="@string/send_play_list"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:icon="@drawable/light_mode_media"
            />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"


            android:layout_margin="0dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left|center_vertical"

            android:textAllCaps = "false"
            android:text="@string/user_play_list"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:icon="@drawable/light_mode_settings"
            />
    </LinearLayout>
</LinearLayout>