<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="@font/ysdisplay"
            android:text="PleyList maker"
            android:textColor="@color/white"
            android:textSize="26dp" />


    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <Button

            android:id="@+id/buttonSearchL"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_marginTop="16dp"
            android:fontFamily="@font/ysdisplay"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cornerRadius="16dp"

            android:textAllCaps = "false"
            android:text="@string/search_play_list"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:icon="@drawable/light_mode_loupe"
            />

        <Button
            android:id="@+id/buttonMediaL"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_marginTop="16dp"
            android:fontFamily="@font/ysdisplay"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cornerRadius="16dp"

            android:textAllCaps = "false"
            android:text="@string/media_play_list"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:icon="@drawable/light_mode_media"
            />
        <Button
            android:id="@+id/buttonSettingsL"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_marginTop="16dp"
            android:fontFamily="@font/ysdisplay"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cornerRadius="16dp"

            android:textAllCaps = "false"
            android:text="@string/settings_play_list"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:icon="@drawable/light_mode_settings"
            />
    </LinearLayout>
</LinearLayout>